# forsyde-deep

./: .gitignore  .travis.yml  ForSyDe-Deep.cabal  Gemfile  INSTALL  README.md  Setup.hs  _config.yml  forsyde-deep.cabal  index.md  stack.yaml
examples/: ALU.hs  ALU_Shallow.hs  BitVector.hs  ButtonEncoder.hs  CarrySelectAdder.hs  Counter.hs  DeepShallow.hs  FoldlVector.hs  FoldlVectorOperator.hs  LFSR.hs  MapLambdaVector.hs  MapVector.hs  MapVectorOperatorSection.hs  MapVectorTransformation.hs  Multiplexer.hs  Multiplexer_FSVector.hs  Null.hs  ParAddFour.hs  SeqAddFour.hs  SimpleDES.hs  SimpleDES_HW.hs  ZipTwist.hs  ZipWithVector.hs  ZipWithVectorOperator.hs  runtest.sh
examples/CounterSystem_HW/: ButtonEncoder.hs  CounterHW.hs  CounterSystemHW.hs  SevenSegmentDecoderHW.hs
examples/issue-40/: Take.hs
examples/issue-41/: Issue_41.hs  Take.hs
examples/issue-41/mingzi/vhdl/: modelsim.ini
examples/issue-41/mingzi/vhdl/mingzi_lib/: mingzi_lib.vhd
examples/issue-41/mingzi/vhdl/mingzi_lib/modelsim/: _info  _lib.qdb  _lib1_0.qdb
examples/issue-41/mingzi/vhdl/work/: mingzi.vhd
lib/: forsyde.vhd
pages/: forsyde-deep-tutorial.md  getting_started.md  setup.md
src/Data/Traversable/: GenericZipWith.hs
src/Data/Typeable/: FSDTypeRepLib.hs
src/ForSyDe/: Deep.hs
src/ForSyDe/Deep/: AbsentExt.hs  Backend.hs  Bit.hs  Config.hs  DFT.hs  FIR.hs  ForSyDeErr.hs  Ids.hs  Netlist.hs  OSharing.hs  Process.hs  Signal.hs  System.hs  Version.hs
src/ForSyDe/Deep/Backend/: GraphML.hs  Ppr.hs  Simulate.hs  VHDL.hs
src/ForSyDe/Deep/Backend/GraphML/: AST.hs  FileIO.hs  Ppr.hs  Traverse.hs
src/ForSyDe/Deep/Backend/GraphML/Traverse/: GraphMLM.hs
src/ForSyDe/Deep/Backend/VHDL/: AST.hs  Constants.hs  FileIO.hs  Generate.hs  Ghdl.hs  GlobalNameTable.hs  GlobalNameTable.hs-boot  Modelsim.hs  Ppr.hs  Quartus.hs  TestBench.hs  Translate.hs  Traverse.hs
src/ForSyDe/Deep/Backend/VHDL/Translate/: HigherOrderFunctions.hs
src/ForSyDe/Deep/Backend/VHDL/Traverse/: VHDLM.hs
src/ForSyDe/Deep/Netlist/: Traverse.hs
src/ForSyDe/Deep/OSharing/: UDynamic.hs
src/ForSyDe/Deep/Process/: Desugar.hs  Desugar.hs-boot  ProcFun.hs  ProcType.hs  ProcVal.hs  SynchProc.hs
src/ForSyDe/Deep/Process/ProcType/: Instances.hs
src/ForSyDe/Deep/System/: Instantiate.hs  SysDef.hs  SysDef.hs-boot  SysFun.hs
src/ForSyDe/Deep/System/SysFun/: Instances.hs
src/Language/Haskell/TH/: Lift.hs  LiftInstances.hs  TypeLib.hs
tests/examples/: Main.hs  VHDLBackend.hs
tests/properties/: VHDLBackend.hs
